Fixing tests and cleaning up some parts of the code

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from yaml import load, CLoader\n",
     "\n",
-    "simulated_job_trace = \"./simulatedJobs_theta2022_week6__StorAlloc_Theta_Lustre_fs0_0.0.5_i.yml\"\n",
+    "simulated_job_trace = \"./simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.5_easy_bf.yml\"\n",
     "\n",
     "results = None\n",
     "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
@@ -301,9 +301,9 @@
     "write_scatter = sns.scatterplot(x=real_write_time, y=sim_write_time, s=20, color=\".10\", ax=axs[0], facecolors=\"blue\", marker=\"x\", alpha=0.3)\n",
     "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0])\n",
     "scatter.set(xlabel=\"Real\", ylabel=\"Simulated\")\n",
-    "axs[0].set_xscale('log')\n",
+    "#axs[0].set_xscale('log')\n",
     "axs[0].set_xlim([0.0001, max_target*1.2])\n",
-    "axs[0].set_yscale('log')\n",
+    "#axs[0].set_yscale('log')\n",
     "axs[0].set_ylim([0.0001, max_target*1.2])\n",
     "\n",
     "binwidth = 100\n",
@@ -436,6 +436,9 @@
    "execution_count": 12,
    "id": "82415cc3-f5a7-4516-a620-2de67ec1acef",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -448,6 +451,9 @@
    "execution_count": 13,
    "id": "5e502580-6a22-47c0-9aa1-246866edb87a",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -462,6 +468,9 @@
    "execution_count": 14,
    "id": "505385fa-868a-4a41-bd4c-42b4d7a478e3",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -520,14 +529,6 @@
     "    sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"-\", linewidth=0.5, ax=axs)\n",
     "scatter.set(xlabel=\"Date (origin approx)\", ylabel=\"Nb of jobs run\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91a8e988-5e0e-40e7-8e59-8336b99cc4c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
