Starting to implement the split of read/write operations by file AND by hosts (1-n hosts read/write to 1-n files). Still experimental

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from yaml import load, CLoader\n",
     "\n",
-    "simulated_job_trace = \"./simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.5_easy_bf.yml\"\n",
+    "simulated_job_trace = \"./simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.1_i.yml\"\n",
     "\n",
     "results = None\n",
     "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
@@ -529,6 +529,14 @@
     "    sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"-\", linewidth=0.5, ax=axs)\n",
     "scatter.set(xlabel=\"Date (origin approx)\", ylabel=\"Nb of jobs run\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e365b002-8a09-4726-a830-185a86294074",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
