Still debug partial read/writes (going there, but allocation fails on a large file writes

--- a/results/AX_Optimization.ipynb
+++ b/results/AX_Optimization.ipynb
@@ -64,7 +64,7 @@
     "    {\n",
     "        \"name\": \"backbone_bw\",\n",
     "        \"type\": \"range\",\n",
-    "        \"bounds\": [220, 240],\n",
+    "        \"bounds\": [120, 240], # Use large ranges\n",
     "        \"value_type\": \"int\",\n",
     "    },\n",
     "    {\n",
@@ -135,7 +135,7 @@
     "        \"bounds\": [0.2, 1],\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
-    "        {\n",
+    "    {\n",
     "        \"name\": \"read_variability\",\n",
     "        \"type\": \"range\",\n",
     "        \"bounds\": [0.2, 1],\n",
@@ -145,6 +145,19 @@
     "        \"name\": \"write_variability\",\n",
     "        \"type\": \"range\",\n",
     "        \"bounds\": [0.2, 1],\n",
+    "        \"value_type\": \"float\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"nb_files_per_read\",\n",
+    "        \"type\": \"choice\",\n",
+    "        \"values\": [1, 2, 3, 4],\n",
+    "        \"is_ordered\": True,\n",
+    "        \"value_type\": \"int\",\n",
+    "    },\n",
+    "        {\n",
+    "        \"name\": \"io_read_node_ratio\",\n",
+    "        \"type\": \"range\",\n",
+    "        \"bounds\": [0, 1],\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
     "]"
@@ -210,6 +223,8 @@
     "    non_linear_coef_write = parametrization.get(\"non_linear_coef_write\")\n",
     "    read_variability = parametrization.get(\"read_variability\")\n",
     "    write_variability = parametrization.get(\"write_variability\")\n",
+    "    nb_files_per_read = parametrization.get(\"nb_files_per_read\")\n",
+    "    io_read_node_ratio = parametrization.get(\"io_read_node_ratio\")\n",
     "    \n",
     "    # Update config file according to parameters provided by Ax\n",
     "    \n",
@@ -223,6 +238,11 @@
     "    yaml_config[\"general\"][\"non_linear_coef_write\"] = non_linear_coef_write\n",
     "    yaml_config[\"general\"][\"read_variability\"] = read_variability\n",
     "    yaml_config[\"general\"][\"write_variability\"] = write_variability\n",
+    "    \n",
+    "    yaml_config[\"general\"][\"nb_files_per_read\"] = nb_files_per_read\n",
+    "    yaml_config[\"general\"][\"io_read_node_ratio\"] = io_read_node_ratio\n",
+    "    yaml_config[\"general\"][\"nb_files_per_write\"] = 1\n",
+    "    yaml_config[\"general\"][\"io_write_node_ratio\"] = 0.0\n",
     "    \n",
     "    # WARINING : HERE WE SET THE SAME READ/WRITE BANDWIDTH FOR ALL DISKS - THIS WILL NOT ALWAYS BE THE CASE.\n",
     "    for storage_node in yaml_config[\"storage\"][\"nodes\"]:\n",
@@ -395,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "76ea4034-a631-4daa-9999-ea541e514f39",
    "metadata": {
     "tags": []
@@ -417,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a0e5103a-06a7-4819-b316-46804f1f438a",
    "metadata": {
     "tags": []
@@ -430,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b1389592-7d35-4d25-b66f-be2e45ebea89",
    "metadata": {
     "tags": []
