--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -341,8 +341,8 @@
     "    s_io_volume_gb = 0\n",
     "    for action in job[\"actions\"]:\n",
     "        \n",
-    "        if action[\"act_type\"] == \"FILEREAD\" or action[\"act_type\"] == \"FILEWRITE\" and action[\"act_status\"] == \"COMPLETED\":\n",
-    "            s_io_volume_gb += action[\"file_size_bytes\"] / 1_000_000_000\n",
+    "        if (action[\"act_type\"] == \"FILEREAD\" or action[\"act_type\"] == \"CUSTOM\") and action[\"act_status\"] == \"COMPLETED\":\n",
+    "            s_io_volume_gb += action[\"io_size_bytes\"] / 1_000_000_000\n",
     "        \n",
     "    sim_io_volume_gb.append(s_io_volume_gb)\n",
     "    \n",
@@ -529,14 +529,6 @@
     "    sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"-\", linewidth=0.5, ax=axs)\n",
     "scatter.set(xlabel=\"Date (origin approx)\", ylabel=\"Nb of jobs run\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e365b002-8a09-4726-a830-185a86294074",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
