--- a/results/AX_Optimization.ipynb
+++ b/results/AX_Optimization.ipynb
@@ -113,16 +113,45 @@
     "    {\n",
     "        \"name\": \"stripe_size\",\n",
     "        \"type\": \"choice\",\n",
-    "        \"values\": [2097152, 4096000, 131072000, 524288000, 1048576000],\n",
+    "        \"values\": [2097152, 4194304, 8388608, 16777216, 67108864, 1073741824],\n",
     "        \"is_ordered\": True,\n",
     "        \"value_type\": \"int\",\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"stripe_count\",\n",
     "        \"type\": \"range\",\n",
-    "        \"bounds\": [1, 40],   # NOTE : never using all OSTs for any allocatin so far\n",
+    "        \"bounds\": [1, 10],   # NOTE : never using all OSTs for any allocation so far\n",
     "        \"value_type\": \"int\",\n",
     "    },\n",
+    "    {\n",
+    "        \"name\": \"nb_files_per_read\",\n",
+    "        \"type\": \"choice\",\n",
+    "        \"values\": [1, 2, 3, 4],\n",
+    "        \"is_ordered\": True,\n",
+    "        \"value_type\": \"int\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"io_read_node_ratio\",\n",
+    "        \"type\": \"range\",\n",
+    "        \"bounds\": [0, 1],\n",
+    "        \"value_type\": \"float\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"nb_files_per_write\",\n",
+    "        \"type\": \"choice\",\n",
+    "        \"values\": [1, 2, 3, 4],\n",
+    "        \"is_ordered\": True,\n",
+    "        \"value_type\": \"int\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"io_write_node_ratio\",\n",
+    "        \"type\": \"range\",\n",
+    "        \"bounds\": [0, 1],\n",
+    "        \"value_type\": \"float\",\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "\"\"\" NOT USING CURRENTLY\n",
     "    {\n",
     "        \"name\": \"non_linear_coef_read\",\n",
     "        \"type\": \"range\",\n",
@@ -135,32 +164,7 @@
     "        \"bounds\": [0.2, 1],\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
-    "    {\n",
-    "        \"name\": \"read_variability\",\n",
-    "        \"type\": \"range\",\n",
-    "        \"bounds\": [0.2, 1],\n",
-    "        \"value_type\": \"float\",\n",
-    "    },\n",
-    "        {\n",
-    "        \"name\": \"write_variability\",\n",
-    "        \"type\": \"range\",\n",
-    "        \"bounds\": [0.2, 1],\n",
-    "        \"value_type\": \"float\",\n",
-    "    },\n",
-    "    {\n",
-    "        \"name\": \"nb_files_per_read\",\n",
-    "        \"type\": \"choice\",\n",
-    "        \"values\": [1, 2, 3, 4],\n",
-    "        \"is_ordered\": True,\n",
-    "        \"value_type\": \"int\",\n",
-    "    },\n",
-    "        {\n",
-    "        \"name\": \"io_read_node_ratio\",\n",
-    "        \"type\": \"range\",\n",
-    "        \"bounds\": [0, 1],\n",
-    "        \"value_type\": \"float\",\n",
-    "    },\n",
-    "]"
+    "\"\"\""
    ]
   },
   {
@@ -219,12 +223,12 @@
     "    disk_wb = parametrization.get(\"disk_wb\")\n",
     "    stripe_size = parametrization.get(\"stripe_size\")\n",
     "    stripe_count = parametrization.get(\"stripe_count\")\n",
-    "    non_linear_coef_read = parametrization.get(\"non_linear_coef_read\")\n",
-    "    non_linear_coef_write = parametrization.get(\"non_linear_coef_write\")\n",
-    "    read_variability = parametrization.get(\"read_variability\")\n",
-    "    write_variability = parametrization.get(\"write_variability\")\n",
+    "    #non_linear_coef_read = parametrization.get(\"non_linear_coef_read\")\n",
+    "    #non_linear_coef_write = parametrization.get(\"non_linear_coef_write\")\n",
     "    nb_files_per_read = parametrization.get(\"nb_files_per_read\")\n",
     "    io_read_node_ratio = parametrization.get(\"io_read_node_ratio\")\n",
+    "    nb_files_per_write = parametrization.get(\"nb_files_per_write\")\n",
+    "    io_write_node_ratio = parametrization.get(\"io_write_node_ratio\")\n",
     "    \n",
     "    # Update config file according to parameters provided by Ax\n",
     "    \n",
@@ -232,17 +236,17 @@
     "    yaml_config[\"general\"][\"permanent_storage_read_bw\"] = f\"{permanent_storage_read_bw}GBps\"\n",
     "    yaml_config[\"general\"][\"permanent_storage_write_bw\"] = f\"{permanent_storage_write_bw}GBps\"\n",
     "    yaml_config[\"general\"][\"preload_percent\"] = preload_percent\n",
-    "    yaml_config[\"general\"][\"amdahl\"] = amdahl\n",
-    "    yaml_config[\"general\"][\"walltime_extension\"] = walltime_extension\n",
-    "    yaml_config[\"general\"][\"non_linear_coef_read\"] = non_linear_coef_read\n",
-    "    yaml_config[\"general\"][\"non_linear_coef_write\"] = non_linear_coef_write\n",
-    "    yaml_config[\"general\"][\"read_variability\"] = read_variability\n",
-    "    yaml_config[\"general\"][\"write_variability\"] = write_variability\n",
+    "    yaml_config[\"general\"][\"amdahl\"] = round(amdahl, 2)\n",
+    "    yaml_config[\"general\"][\"walltime_extension\"] = round(walltime_extension, 2)\n",
+    "    yaml_config[\"general\"][\"non_linear_coef_read\"] = 1 #non_linear_coef_read\n",
+    "    yaml_config[\"general\"][\"non_linear_coef_write\"] = 1 #non_linear_coef_write\n",
+    "    yaml_config[\"general\"][\"read_variability\"] = 1 # deactivated\n",
+    "    yaml_config[\"general\"][\"write_variability\"] = 1 # deactivated\n",
     "    \n",
     "    yaml_config[\"general\"][\"nb_files_per_read\"] = nb_files_per_read\n",
-    "    yaml_config[\"general\"][\"io_read_node_ratio\"] = io_read_node_ratio\n",
-    "    yaml_config[\"general\"][\"nb_files_per_write\"] = 1\n",
-    "    yaml_config[\"general\"][\"io_write_node_ratio\"] = 0.0\n",
+    "    yaml_config[\"general\"][\"io_read_node_ratio\"] = round(io_read_node_ratio, 2)\n",
+    "    yaml_config[\"general\"][\"nb_files_per_write\"] = nb_files_per_write\n",
+    "    yaml_config[\"general\"][\"io_write_node_ratio\"] = round(io_write_node_ratio, 2)\n",
     "    \n",
     "    # WARINING : HERE WE SET THE SAME READ/WRITE BANDWIDTH FOR ALL DISKS - THIS WILL NOT ALWAYS BE THE CASE.\n",
     "    for storage_node in yaml_config[\"storage\"][\"nodes\"]:\n",
@@ -415,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "76ea4034-a631-4daa-9999-ea541e514f39",
    "metadata": {
     "tags": []
