Updated datasets for calibration ; Adding many comments, log traces, cleaning up code, and even getting a little closer to real behaviour in the LustreAllocator ; base theta_config updated for longer simulation runs (stripe_count increased)

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from yaml import load, CLoader\n",
     "\n",
-    "simulated_job_trace = \"./simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.1_i.yml\"\n",
+    "simulated_job_trace = \"./simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.1_stripe_cnt_4.yml\"\n",
     "\n",
     "results = None\n",
     "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
