--- a/results/AX_Optimization.ipynb
+++ b/results/AX_Optimization.ipynb
@@ -90,12 +90,14 @@
     "        \"name\": \"amdahl\",\n",
     "        \"type\": \"range\",\n",
     "        \"bounds\": [0.1, 1.0],\n",
+    "        \"digits\": 2,\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
     "    {\n",
     "        \"name\": \"walltime_extension\",\n",
     "        \"type\": \"range\",\n",
     "        \"bounds\": [1.0, 1.3],\n",
+    "        \"digits\": 2,\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
     "    {\n",
@@ -134,6 +136,7 @@
     "        \"name\": \"io_read_node_ratio\",\n",
     "        \"type\": \"range\",\n",
     "        \"bounds\": [0, 1],\n",
+    "        \"digits\": 2,\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
     "    {\n",
@@ -147,6 +150,7 @@
     "        \"name\": \"io_write_node_ratio\",\n",
     "        \"type\": \"range\",\n",
     "        \"bounds\": [0, 1],\n",
+    "        \"digits\": 2,\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
     "]\n",
@@ -236,17 +240,17 @@
     "    yaml_config[\"general\"][\"permanent_storage_read_bw\"] = f\"{permanent_storage_read_bw}GBps\"\n",
     "    yaml_config[\"general\"][\"permanent_storage_write_bw\"] = f\"{permanent_storage_write_bw}GBps\"\n",
     "    yaml_config[\"general\"][\"preload_percent\"] = preload_percent\n",
-    "    yaml_config[\"general\"][\"amdahl\"] = round(amdahl, 2)\n",
-    "    yaml_config[\"general\"][\"walltime_extension\"] = round(walltime_extension, 2)\n",
+    "    yaml_config[\"general\"][\"amdahl\"] = amdahl\n",
+    "    yaml_config[\"general\"][\"walltime_extension\"] = walltime_extension\n",
     "    yaml_config[\"general\"][\"non_linear_coef_read\"] = 1 #non_linear_coef_read\n",
     "    yaml_config[\"general\"][\"non_linear_coef_write\"] = 1 #non_linear_coef_write\n",
     "    yaml_config[\"general\"][\"read_variability\"] = 1 # deactivated\n",
     "    yaml_config[\"general\"][\"write_variability\"] = 1 # deactivated\n",
     "    \n",
     "    yaml_config[\"general\"][\"nb_files_per_read\"] = nb_files_per_read\n",
-    "    yaml_config[\"general\"][\"io_read_node_ratio\"] = round(io_read_node_ratio, 2)\n",
+    "    yaml_config[\"general\"][\"io_read_node_ratio\"] = io_read_node_ratio\n",
     "    yaml_config[\"general\"][\"nb_files_per_write\"] = nb_files_per_write\n",
-    "    yaml_config[\"general\"][\"io_write_node_ratio\"] = round(io_write_node_ratio, 2)\n",
+    "    yaml_config[\"general\"][\"io_write_node_ratio\"] = io_write_node_ratio\n",
     "    \n",
     "    # WARINING : HERE WE SET THE SAME READ/WRITE BANDWIDTH FOR ALL DISKS - THIS WILL NOT ALWAYS BE THE CASE.\n",
     "    for storage_node in yaml_config[\"storage\"][\"nodes\"]:\n",
