Enhanced functional tests, with 'in-depth' analysis of simulated jobs traces and action traces

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "6569aea3-44c8-41c0-8cd1-a59d13000e83",
    "metadata": {
     "tags": []
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "a9039ccc-3bb4-4909-9bd5-c8189acf3439",
    "metadata": {
     "tags": []
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "05fb2f5a-f68f-4d71-abd3-8ec093c42c64",
    "metadata": {
     "tags": []
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "337e586d-e225-47cf-b5a2-ea915322c5d1",
    "metadata": {
     "tags": []
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "660a506a-f064-4fd5-bcfc-b9de61b8770d",
    "metadata": {
     "tags": []
@@ -166,6 +166,9 @@
     "    sim_runtime.append(job[\"job_runtime_s\"])\n",
     "    real_runtime.append(job[\"real_runtime_s\"])\n",
     "    \n",
+    "mean_real_runtime = np.mean(real_runtime)\n",
+    "mean_sim_runtime = np.mean(sim_runtime)   \n",
+    "    \n",
     "mean_runtime_difference = np.mean(runtime_diffs)\n",
     "\n",
     "# Pearson's correlation\n",
@@ -174,6 +177,8 @@
     "# Cohen's D \n",
     "runtime_cohen_d = cohend(sim_runtime, real_runtime)\n",
     "\n",
+    "print(f\"Mean runtime for simulation : {mean_sim_runtime}s\")\n",
+    "print(f\"Mean runtime in traces : {mean_real_runtime}s\")\n",
     "print(f\"The mean run time difference between simulated and real values for all jobs is {mean_runtime_difference}s\")\n",
     "print(f\"The Pearson's corr is {runtime_corr} (we want a correlation as high as possible)\") \n",
     "print(f\"The Cohen d effect size is {runtime_cohen_d} (we want an effect size as low as possible, the use of the simulator should lead to values close to real world traces)\")"
@@ -181,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "95ae48a8-64ca-4cc7-9f86-9eb1db22dc0d",
    "metadata": {
     "tags": []
@@ -213,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "bdf129b0-8b28-493b-b1fc-b92647c5f8e5",
    "metadata": {
     "tags": []
@@ -276,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "2c8e7372-ef64-4187-a1fd-fffc589912fa",
    "metadata": {
     "tags": []
@@ -316,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "47feb999-38ce-4b5d-8186-e526508216eb",
    "metadata": {
     "tags": []
@@ -363,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "2321ddf5-2f04-40ea-a45c-c61e7843ecfb",
    "metadata": {
     "tags": []
@@ -392,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "a5d76834-30a3-4c07-a572-f5f0469870cd",
    "metadata": {},
    "outputs": [],
@@ -433,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "82415cc3-f5a7-4516-a620-2de67ec1acef",
    "metadata": {
     "jupyter": {
@@ -448,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "5e502580-6a22-47c0-9aa1-246866edb87a",
    "metadata": {
     "jupyter": {
@@ -465,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "505385fa-868a-4a41-bd4c-42b4d7a478e3",
    "metadata": {
     "jupyter": {
@@ -481,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "0a68ce3d-635d-4826-831f-e892cd647fd4",
    "metadata": {
     "tags": []
@@ -495,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "177a8535-0880-407e-a419-4210268a0a62",
    "metadata": {
     "tags": []
