Adding a new calibration script (updated version from the notebook, which will be reworked at some point, to run calibrations during CI. Not working  / tested yet

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "bdf129b0-8b28-493b-b1fc-b92647c5f8e5",
    "metadata": {
     "tags": []
@@ -226,6 +226,8 @@
    "outputs": [],
    "source": [
     "## Compute the IO durations differences and stats for all jobs\n",
+    "\n",
+    "raise std::error(\"DEPRECATED\")\n",
     "\n",
     "# Mean diffs\n",
     "io_time_diff = []\n",
@@ -255,7 +257,7 @@
     "            continue\n",
     "        if action[\"act_type\"] == \"FILEREAD\":\n",
     "            s_r_time += action[\"act_duration\"]\n",
-    "        if action[\"act_type\"] == \"FILEWRITE\":\n",
+    "        if action[\"act_type\"] == \"CUSTOM\":  # only custom action here is our custom write action\n",
     "            s_w_time += action[\"act_duration\"]\n",
     "        s_io_time += action[\"act_duration\"]\n",
     "    \n",
@@ -281,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "2c8e7372-ef64-4187-a1fd-fffc589912fa",
    "metadata": {
     "tags": []
