--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -37,12 +37,13 @@
    "source": [
     "from yaml import load, CLoader\n",
     "\n",
-    "simulated_job_trace = \"./simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.1_i.yml\"\n",
+    "simulated_job_trace = \"../build/simulatedJobs_theta2022_week41__Fives_C_theta2022_week41_0.0.1_week41.yml\"\n",
     "\n",
     "results = None\n",
     "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
     "    results = load(job_results, Loader=CLoader)\n",
     "    \n",
+    "\n",
     "print(f\"Loaded result dataset with {len(results)} jobs\")"
    ]
   },
@@ -148,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "660a506a-f064-4fd5-bcfc-b9de61b8770d",
    "metadata": {
     "tags": []
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "bdf129b0-8b28-493b-b1fc-b92647c5f8e5",
    "metadata": {
     "tags": []
@@ -226,8 +227,7 @@
    "outputs": [],
    "source": [
     "## Compute the IO durations differences and stats for all jobs\n",
-    "\n",
-    "raise std::error(\"DEPRECATED\")\n",
+    "import statsmodels.api as sm\n",
     "\n",
     "# Mean diffs\n",
     "io_time_diff = []\n",
@@ -238,14 +238,24 @@
     "real_read_time = []\n",
     "real_write_time = []\n",
     "\n",
+    "real_rt_higher_than_wt = []\n",
+    "real_volume_GB = []\n",
+    "\n",
     "for job in results:\n",
-    "    \n",
+    "\n",
     "    # \"Real\"\n",
-    "    r_io_time = (job[\"real_cReadTime_s\"] +  job[\"real_cWriteTime_s\"] +  job[\"real_cMetaTime_s\"]) / job[\"real_cores_used\"]\n",
+    "    r_io_time = (job[\"real_cReadTime_s\"] + job[\"real_cWriteTime_s\"] + job[\"real_cMetaTime_s\"]) / job[\"sum_nprocs\"]\n",
     "    real_io_time.append(r_io_time)\n",
-    "    real_read_time.append(job[\"real_cReadTime_s\"] / job[\"real_cores_used\"])\n",
-    "    real_write_time.append(job[\"real_cWriteTime_s\"] / job[\"real_cores_used\"])\n",
+    "    real_read_time.append(job[\"real_cReadTime_s\"] / job[\"sum_nprocs\"] )\n",
+    "    real_write_time.append(job[\"real_cWriteTime_s\"]  / job[\"sum_nprocs\"] )\n",
+    "    real_volume_GB.append(job[\"real_read_bytes\"] / 1_000_000_000 + job[\"real_written_bytes\"] / 1_000_000_000)\n",
     "    \n",
+    "    if real_read_time >= real_write_time:\n",
+    "        real_rt_higher_than_wt.append(\"higher\")\n",
+    "    else:\n",
+    "        real_rt_higher_than_wt.append(\"lower\")\n",
+    "        \n",
+    "\n",
     "    # Simulated\n",
     "    s_io_time = 0\n",
     "    s_r_time = 0\n",
@@ -256,74 +266,97 @@
     "        if action[\"act_status\"] != \"COMPLETED\":\n",
     "            continue\n",
     "        if action[\"act_type\"] == \"FILEREAD\":\n",
+    "            #s_r_time += (action[\"act_duration\"] / action[\"nb_procs_io\"])\n",
     "            s_r_time += action[\"act_duration\"]\n",
-    "        if action[\"act_type\"] == \"CUSTOM\":  # only custom action here is our custom write action\n",
+    "        if action[\"act_type\"] == \"CUSTOM\" and \"write\" in str(action[\"sub_job\"]):  # only custom action out there is our custom write action\n",
+    "            # s_w_time += (action[\"act_duration\"] / action[\"nb_procs_io\"])\n",
     "            s_w_time += action[\"act_duration\"]\n",
-    "        s_io_time += action[\"act_duration\"]\n",
-    "    \n",
+    "\n",
+    "    s_io_time = (s_r_time + s_w_time) / (len(job[\"actions\"] * 2)) \n",
+    "\n",
     "    sim_io_time.append(s_io_time)\n",
     "    sim_read_time.append(s_r_time)\n",
-    "    # print(s_r_time)\n",
     "    sim_write_time.append(s_w_time)\n",
-    "    \n",
+    "\n",
     "    io_time_diff.append(abs(s_io_time - r_io_time))\n",
-    "    \n",
+    "\n",
+    "\n",
+    "mean_real_io_time = np.mean(real_io_time)\n",
+    "mean_sim_iotime = np.mean(sim_io_time)\n",
     "mean_io_time_difference = np.mean(io_time_diff)\n",
     "\n",
     "# Pearson's correlation\n",
     "io_time_corr, _ = pearsonr(sim_io_time, real_io_time)\n",
     "\n",
-    "# Cohen's D \n",
+    "# Cohen's D\n",
     "io_time_cohen_d = cohend(sim_io_time, real_io_time)\n",
     "\n",
-    "print(f\"The mean wait time difference between simulated and real values for all jobs is {mean_io_time_difference}s (we want a mean difference as close to 0 as possible)\")\n",
-    "print(f\"The Pearson's corr is {io_time_corr} (we want a correlation as high as possible)\") \n",
-    "print(f\"The Cohen d effect size is {io_time_cohen_d} (we want an effect size as low as possible, the use of the simulator should lead to values close to real world traces)\")"
+    "ztest_iotime_tstat, ztest_iotime_pvalue = sm.stats.ztest(sim_io_time, real_io_time, alternative=\"two-sided\")\n",
+    "    \n",
+    "print(\n",
+    "        f\"  - Mean IO time for simulation : {mean_sim_iotime}s\\n\" +\n",
+    "        f\"  - Mean IO time in traces : {mean_real_io_time}s\\n\" +\n",
+    "        f\"  - The mean IO time difference between simulated and real values for all jobs is {mean_io_time_difference}s \" +\n",
+    "        \"(we want a mean difference as close to 0 as possible)\\n\" +\n",
+    "        f\"  - The Pearson's corr is {io_time_corr} (we want a correlation as high as possible)\\n\" +\n",
+    "        f\"  - The Cohen d effect size is {io_time_cohen_d} (we want an effect size as low as possible, \" +\n",
+    "        \"the use of the simulator should lead to values close to real world traces)\\n\" +\n",
+    "        f\"  - ztest tstat : {ztest_iotime_tstat}\\n\" +\n",
+    "        f\"  - ztest pvalue: {ztest_iotime_pvalue}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "2c8e7372-ef64-4187-a1fd-fffc589912fa",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(ncols=3)\n",
+    "fig, axs = plt.subplots(ncols=2)\n",
     "fig.set_tight_layout(tight=True)\n",
-    "fig.set_figheight(6)\n",
+    "fig.set_figheight(10)\n",
     "fig.set_figwidth(20)\n",
-    "\n",
-    "print(f\"Min value for real_read_time : {min(real_read_time)}\")\n",
-    "print(f\"Min value for sim_read_time : {min(sim_read_time)}\")\n",
-    "print(f\"Min value for real_write_time : {min(real_write_time)}\")\n",
-    "print(f\"Min value for sim_write_time : {min(sim_write_time)}\")\n",
+    "REAL_COLOR = (0.1, 0.4, 0.8, 0.5)\n",
+    "SIM_COLOR = (1, 0.5, 0.2, 0.5)\n",
     "\n",
     "max_target = max(max(real_io_time), max(sim_io_time))\n",
     "line = {\"x\": [0, max_target], \"y\": [0, max_target]}\n",
     "\n",
-    "scatter = sns.scatterplot(x=real_io_time, y=sim_io_time, s=40, color=\".15\", alpha=0.5, ax=axs[0])\n",
-    "read_scatter = sns.scatterplot(x=real_read_time, y=sim_read_time, s=20, ax=axs[0], facecolors=\"red\", marker=\"+\", alpha=0.6)\n",
-    "write_scatter = sns.scatterplot(x=real_write_time, y=sim_write_time, s=20, color=\".10\", ax=axs[0], facecolors=\"blue\", marker=\"x\", alpha=0.3)\n",
-    "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0])\n",
-    "scatter.set(xlabel=\"Real\", ylabel=\"Simulated\")\n",
-    "#axs[0].set_xscale('log')\n",
-    "axs[0].set_xlim([0.0001, max_target*1.2])\n",
-    "#axs[0].set_yscale('log')\n",
-    "axs[0].set_ylim([0.0001, max_target*1.2])\n",
+    "scatter = sns.scatterplot(x=real_io_time, y=sim_io_time, hue=real_rt_higher_than_wt, size=real_volume_GB, sizes=(50,200), alpha=0.5, ax=axs[0])\n",
+    "print(scatter.legend())\n",
+    "\n",
+    "read_scatter = sns.scatterplot(x=real_read_time, y=sim_read_time, s=20, ax=axs[0], facecolors=\"red\", marker=\"+\", alpha=0.6, label=\"read\")\n",
+    "write_scatter = sns.scatterplot(x=real_write_time, y=sim_write_time, s=20, color=\".10\", ax=axs[0], facecolors=\"blue\", marker=\"x\", alpha=0.3, label=\"write\")\n",
+    "\n",
+    "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0], label=\"Real == Sim target\")\n",
+    "scatter.set(xlabel=\"Real jobs (mean IO time per rank)\", ylabel=\"Simulated jobs (mean IO time per simulated rank)\")\n",
+    "axs[0].legend()\n",
+    "# axs[0].set_xscale('log')\n",
+    "axs[0].set_xlim([0.0001, max_target*1.05])\n",
+    "# axs[0].set_yscale('log')\n",
+    "axs[0].set_ylim([0.0001, max_target*1.05])\n",
     "\n",
     "binwidth = 100\n",
-    "real_hist = sns.histplot(data=real_io_time, binwidth=binwidth, ax=axs[1], color=real_color)\n",
-    "real_hist.set(xlabel=f\"Real IO time - binwidth = {binwidth}s\")\n",
     "\n",
-    "sim_hist = sns.histplot(data=sim_io_time, binwidth=binwidth, ax=axs[2], color=sim_color)\n",
-    "sim_hist.set(xlabel=f\"Simulated IO time - binwidth = {binwidth}s\")"
+    "hist_data = {\"values\": [], \"Origin\": []}\n",
+    "hist_data[\"values\"].extend(real_io_time)\n",
+    "hist_data[\"values\"].extend(sim_io_time)\n",
+    "hist_data[\"Origin\"].extend([\"real\" for i in range(len(real_io_time))])\n",
+    "hist_data[\"Origin\"].extend([\"sim\" for i in range(len(sim_io_time))])\n",
+    "\n",
+    "global_hist = sns.histplot(data=hist_data, x=\"values\", hue=\"Origin\", binwidth=binwidth,\n",
+    "                         ax=axs[1], multiple=\"dodge\", palette={\"real\": REAL_COLOR, \"sim\": SIM_COLOR})\n",
+    "global_hist.set(xlabel=f\"IO times histogram (real / simulation) ; binwidth = {binwidth}s\")\n",
+    "\n",
+    "#plt.savefig(f\"{CI_PIPELINE_ID}_iotime.pdf\", dpi=300, format='pdf')\n",
+    "#plt.savefig(f\"{CI_PIPELINE_ID}_iotime.png\", dpi=300, format='png')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "47feb999-38ce-4b5d-8186-e526508216eb",
    "metadata": {
     "tags": []
@@ -370,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2321ddf5-2f04-40ea-a45c-c61e7843ecfb",
    "metadata": {
     "tags": []
@@ -399,9 +432,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a5d76834-30a3-4c07-a572-f5f0469870cd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -440,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "82415cc3-f5a7-4516-a620-2de67ec1acef",
    "metadata": {
     "jupyter": {
@@ -455,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "5e502580-6a22-47c0-9aa1-246866edb87a",
    "metadata": {
     "jupyter": {
@@ -472,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "505385fa-868a-4a41-bd4c-42b4d7a478e3",
    "metadata": {
     "jupyter": {
@@ -488,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "0a68ce3d-635d-4826-831f-e892cd647fd4",
    "metadata": {
     "tags": []
@@ -502,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "177a8535-0880-407e-a419-4210268a0a62",
    "metadata": {
     "tags": []
