Cleaned up some old configurations and datasets ; minor updated in SimulationAnalysis to make it possible to plot the Volume to I/O time scatter plot for simulation data

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from yaml import load, CLoader\n",
     "\n",
-    "simulated_job_trace = \"../build/simulatedJobs_theta2022_week41__Fives_C_theta2022_week41_0.0.1_week41.yml\"\n",
+    "simulated_job_trace = \"./validation-1_30_01_CAT1/simulatedJobs_theta2022_1__Fives_C_theta2022_month8_cat1_0.0.1-g5k_validation.yml\"\n",
     "\n",
     "results = None\n",
     "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
@@ -70,6 +70,99 @@
     " u1, u2 = np.mean(d1), np.mean(d2)\n",
     " # calculate the effect size\n",
     " return (u1 - u2) / s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5b30f6e9-0ae3-4a4e-8583-755381077dd7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "sim_io_times = np.array([])\n",
+    "sim_io_volumes = np.array([])\n",
+    "sim_io_bw_mb = np.array([])\n",
+    "\n",
+    "for job in results:\n",
+    "\n",
+    "    # Simulated only\n",
+    "    s_io_time = 0\n",
+    "    s_r_time = 0\n",
+    "    s_w_time = 0\n",
+    "    s_io_vol = 0\n",
+    "    for action in job[\"actions\"]:\n",
+    "        if action[\"act_type\"] == \"COMPUTE\" or action[\"act_type\"] == \"SLEEP\":\n",
+    "            continue\n",
+    "        if action[\"act_status\"] != \"COMPLETED\":\n",
+    "            continue\n",
+    "        if action[\"act_type\"] == \"FILEREAD\":\n",
+    "            s_io_time += action[\"act_duration\"] * action[\"nb_stripes\"]\n",
+    "            s_io_vol += action[\"io_size_bytes\"]\n",
+    "        if action[\"act_type\"] == \"CUSTOM\" and \"write\" in str(action[\"sub_job\"]):\n",
+    "            s_io_time += action[\"act_duration\"] * action[\"nb_stripes\"]\n",
+    "            s_io_vol += action[\"io_size_bytes\"] \n",
+    "\n",
+    "    if len(job['actions']) != 0:\n",
+    "        sim_io_times = np.append(sim_io_times, s_io_time)\n",
+    "        sim_io_volumes = np.append(sim_io_volumes, s_io_vol)\n",
+    "        sim_io_bw_mb = np.append(sim_io_bw_mb, (s_io_vol / 1_000_000) / s_io_time)\n",
+    "        \n",
+    "    \n",
+    "print(len(sim_io_bw_mb))\n",
+    "        \n",
+    "import seaborn as sns\n",
+    "import matplotlib \n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "line_75 = {'x': [0.1, 1000000.0], 'y': [5071992.807945422, 49511859168074.27]}\n",
+    "line_25 = {'x': [0.1, 1000000.0], 'y': [242675.1002595881, 2368949610659.6855]}\n",
+    "\n",
+    "    \n",
+    "fig, ax = plt.subplots(figsize=(8,5), frameon=True, linewidth=0, layout='constrained')\n",
+    "\n",
+    "# Scatter plot of Total IO time to Total Bytes READ\n",
+    "g = sns.scatterplot(x=sim_io_times, y=sim_io_volumes, palette=sns.color_palette(\"crest\", as_cmap=True), ax=ax, zorder=10)\n",
+    "g.set(xscale='log', yscale='log')\n",
+    "g.set(xlabel=\"Total simulated I/O duration per job (s)\", ylabel=\"Total simulated I/O volume per job (Bytes)\")\n",
+    "\n",
+    "sns.lineplot(x=\"x\", y=\"y\", data=line_75, legend=None, color=\"#e91140\", zorder=20, label=\"Q3 I/O BW\", ax=ax, linestyle=\"--\", linewidth=1.2, alpha=0.8)\n",
+    "sns.lineplot(x=\"x\", y=\"y\", data=line_25, legend=None, color=\"#2b54a5\", zorder=20, label=\"Q1 I/O BW\", ax=ax, linestyle=\"--\", linewidth=1.2, alpha=0.8)\n",
+    "\n",
+    "ax.minorticks_on()\n",
+    "ax.grid(visible=True, which=\"both\", axis=\"both\", zorder=-10.0, alpha=0.4, linewidth=1)\n",
+    "ax.set_frame_on(False)\n",
+    "# ax.set_xlim(10e-5)\n",
+    "\n",
+    "legend = ax.legend(loc=\"best\", bbox_to_anchor=(1, 0.5, 0, 0.4), fontsize=10, frameon=False, handletextpad=0.2)\n",
+    "\n",
+    "handles, labels = ax.get_legend_handles_labels()\n",
+    "handles.insert(-2, handles[0])\n",
+    "labels.insert(-2, \"Bandwidth\\nthresholds\")\n",
+    "\n",
+    "legend._legend_box = None\n",
+    "legend._init_legend_box(handles, labels)\n",
+    "legend._set_loc(legend._loc)\n",
+    "legend.set_title(legend.get_title().get_text())\n",
+    "\n",
+    "texts = legend.get_texts()\n",
+    "for text in texts:\n",
+    "    if text.get_text() == \"CUMUL_READ_BW_MB\":\n",
+    "        text.set_text(\"Cumulated read\\nbandwidth\")\n",
+    "    if text.get_text() == \"NODES_USED\":\n",
+    "        text.set_text(\"Nodes in\\nreservation\")\n",
+    "        break\n",
+    "    try:\n",
+    "        int(text.get_text())\n",
+    "    except ValueError:\n",
+    "        continue\n",
+    "    else:\n",
+    "        text.set_text(f\"<= {int(text.get_text())} MB/s\")\n",
+    "\n",
+    "plt.savefig(\"IO_volume_to_IO_time_simulated.png\", dpi=300)"
    ]
   },
   {
