--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -29,31 +29,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6569aea3-44c8-41c0-8cd1-a59d13000e83",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from yaml import load, CLoader\n",
-    "\n",
-    "simulated_job_trace = \"./validation-1_30_01_CAT1/simulatedJobs_theta2022_1__Fives_C_theta2022_month8_cat1_0.0.1-g5k_validation.yml\"\n",
-    "\n",
-    "results = None\n",
-    "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
-    "    results = load(job_results, Loader=CLoader)\n",
-    "    \n",
-    "\n",
-    "print(f\"Loaded result dataset with {len(results)} jobs\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a9039ccc-3bb4-4909-9bd5-c8189acf3439",
-   "metadata": {
-    "tags": []
-   },
+   "id": "ce999d6d-b1c4-418b-84ae-598bd82f3941",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -74,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "5b30f6e9-0ae3-4a4e-8583-755381077dd7",
    "metadata": {
     "tags": []
@@ -82,10 +59,129 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from yaml import load, CLoader\n",
+    "import pathlib\n",
+    "\n",
+    "#directory = \"./validation-2-14_02_CAT1/month_simulations_9_cat1\"\n",
+    "directory = \"./validation-4-19_02_MTD_NC/calibration_mtd_nc_cat1\"\n",
+    "\n",
+    "result_path = pathlib.Path(directory)\n",
+    "files = [f for f in result_path.iterdir() if f.is_file()]\n",
+    "files = sorted(files)\n",
+    "\n",
+    "for filename in files:\n",
+    "\n",
+    "    sim_io_times = np.array([])\n",
+    "    sim_io_volumes = np.array([])\n",
+    "    sim_io_bw_mb = np.array([])\n",
+    "    \n",
+    "    results = None\n",
+    "    with open(filename, \"r\", encoding=\"utf-8\") as job_results:\n",
+    "        results = load(job_results, Loader=CLoader)\n",
+    "    \n",
+    "    for job in results:\n",
+    "\n",
+    "        # Simulated only\n",
+    "        s_io_time = 0\n",
+    "        s_r_time = 0\n",
+    "        s_w_time = 0\n",
+    "        s_io_vol = 0\n",
+    "        for action in job[\"actions\"]:\n",
+    "            if action[\"act_type\"] == \"COMPUTE\" or action[\"act_type\"] == \"SLEEP\":\n",
+    "                continue\n",
+    "            if action[\"act_status\"] != \"COMPLETED\":\n",
+    "                continue\n",
+    "            if action[\"act_type\"] == \"FILEREAD\":\n",
+    "                s_io_time += action[\"act_duration\"] * action[\"nb_stripes\"]\n",
+    "                s_io_vol += action[\"io_size_bytes\"]\n",
+    "            if action[\"act_type\"] == \"CUSTOM\" and \"write\" in str(action[\"sub_job\"]):\n",
+    "                s_io_time += action[\"act_duration\"] * action[\"nb_stripes\"]\n",
+    "                s_io_vol += action[\"io_size_bytes\"] \n",
+    "\n",
+    "        if len(job['actions']) != 0:\n",
+    "            sim_io_times = np.append(sim_io_times, s_io_time)\n",
+    "            sim_io_volumes = np.append(sim_io_volumes, s_io_vol)\n",
+    "            sim_io_bw_mb = np.append(sim_io_bw_mb, (s_io_vol / 1_000_000) / s_io_time)\n",
+    "\n",
+    "\n",
+    "    print(len(sim_io_bw_mb))\n",
+    "\n",
+    "    import seaborn as sns\n",
+    "    import matplotlib \n",
+    "    import matplotlib.pyplot as plt\n",
+    "\n",
+    "    line_75 = {'x': [0.1, 1000000.0], 'y': [5071992.807945422, 49511859168074.27]}\n",
+    "    line_25 = {'x': [0.1, 1000000.0], 'y': [242675.1002595881, 2368949610659.6855]}\n",
+    "    line_75_f = {'x': [0.1, 1000000.0], 'y': [2401391.9159769486, 23441945375976.598]}\n",
+    "    line_25_f = {'x': [0.1, 1000000.0], 'y': [317368.59941636777, 3098093785554.3726]}\n",
+    "    \n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(8,5), frameon=True, linewidth=0, layout='constrained')\n",
+    "\n",
+    "    # Scatter plot of Total IO time to Total Bytes READ\n",
+    "    g = sns.scatterplot(x=sim_io_times, y=sim_io_volumes, palette=sns.color_palette(\"crest\", as_cmap=True), hue=sim_io_bw_mb, ax=ax, zorder=10)\n",
+    "    g.set(xscale='log', yscale='log')\n",
+    "    g.set(xlabel=\"Total simulated I/O duration per job (s)\", ylabel=\"Total simulated I/O volume per job (Bytes)\")\n",
+    "    g.set(title=filename)\n",
+    "\n",
+    "    sns.lineplot(x=\"x\", y=\"y\", data=line_75, legend=None, color=\"#e91140\", zorder=20, label=\"Q3 I/O BW\", ax=ax, linestyle=\"--\", linewidth=1.2, alpha=0.8)\n",
+    "    sns.lineplot(x=\"x\", y=\"y\", data=line_25, legend=None, color=\"#2b54a5\", zorder=20, label=\"Q1 I/O BW\", ax=ax, linestyle=\"--\", linewidth=1.2, alpha=0.8)\n",
+    "    sns.lineplot(x=\"x\", y=\"y\", data=line_75_f, legend=None, color=\"#e91140\", zorder=20, label=\"Q3 I/O BW\", ax=ax, linestyle=\"-\", linewidth=1, alpha=0.8)\n",
+    "    sns.lineplot(x=\"x\", y=\"y\", data=line_25_f, legend=None, color=\"#2b54a5\", zorder=20, label=\"Q1 I/O BW\", ax=ax, linestyle=\"-\", linewidth=1, alpha=0.8)\n",
+    "\n",
+    "    ax.minorticks_on()\n",
+    "    ax.grid(visible=True, which=\"both\", axis=\"both\", zorder=-10.0, alpha=0.4, linewidth=1)\n",
+    "    ax.set_frame_on(False)\n",
+    "    # ax.set_xlim(10e-5)\n",
+    "\n",
+    "    legend = ax.legend(loc=\"best\", bbox_to_anchor=(1, 0.5, 0, 0.4), fontsize=10, frameon=False, handletextpad=0.2)\n",
+    "\n",
+    "    handles, labels = ax.get_legend_handles_labels()\n",
+    "    handles.insert(-2, handles[0])\n",
+    "    labels.insert(-2, \"Bandwidth\\nthresholds\")\n",
+    "\n",
+    "    legend._legend_box = None\n",
+    "    legend._init_legend_box(handles, labels)\n",
+    "    legend._set_loc(legend._loc)\n",
+    "    legend.set_title(legend.get_title().get_text())\n",
+    "\n",
+    "    texts = legend.get_texts()\n",
+    "    for text in texts:\n",
+    "        if text.get_text() == \"CUMUL_READ_BW_MB\":\n",
+    "            text.set_text(\"Cumulated read\\nbandwidth\")\n",
+    "        if text.get_text() == \"NODES_USED\":\n",
+    "            text.set_text(\"Nodes in\\nreservation\")\n",
+    "            break\n",
+    "        try:\n",
+    "            int(text.get_text())\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "        else:\n",
+    "            text.set_text(f\"<= {int(text.get_text())} MB/s\")\n",
+    "\n",
+    "    # plt.savefig(f\"IO_volume_to_IO_time_simulated.png\", dpi=300)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ac01bcc5-3bcd-4230-97e7-8f8e4a980d27",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "full_trace = f\"./validation-4-19_02_MTD_NC/simulatedJobs_theta2022_1__Fives_C_theta2022_aggMonth11_cat1_0.0.1_full_cat1_nc.yml\"\n",
+    "\n",
     "\n",
     "sim_io_times = np.array([])\n",
     "sim_io_volumes = np.array([])\n",
     "sim_io_bw_mb = np.array([])\n",
+    "\n",
+    "results = None\n",
+    "with open(full_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
+    "    results = load(job_results, Loader=CLoader)\n",
     "\n",
     "for job in results:\n",
     "\n",
@@ -110,27 +206,32 @@
     "        sim_io_times = np.append(sim_io_times, s_io_time)\n",
     "        sim_io_volumes = np.append(sim_io_volumes, s_io_vol)\n",
     "        sim_io_bw_mb = np.append(sim_io_bw_mb, (s_io_vol / 1_000_000) / s_io_time)\n",
-    "        \n",
-    "    \n",
+    "\n",
+    "\n",
     "print(len(sim_io_bw_mb))\n",
-    "        \n",
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib \n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "line_75 = {'x': [0.1, 1000000.0], 'y': [5071992.807945422, 49511859168074.27]}\n",
     "line_25 = {'x': [0.1, 1000000.0], 'y': [242675.1002595881, 2368949610659.6855]}\n",
+    "line_75_f = {'x': [0.1, 1000000.0], 'y': [2401391.9159769486, 23441945375976.598]}\n",
+    "line_25_f = {'x': [0.1, 1000000.0], 'y': [317368.59941636777, 3098093785554.3726]}\n",
     "\n",
-    "    \n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(8,5), frameon=True, linewidth=0, layout='constrained')\n",
     "\n",
     "# Scatter plot of Total IO time to Total Bytes READ\n",
-    "g = sns.scatterplot(x=sim_io_times, y=sim_io_volumes, palette=sns.color_palette(\"crest\", as_cmap=True), ax=ax, zorder=10)\n",
+    "g = sns.scatterplot(x=sim_io_times, y=sim_io_volumes, palette=sns.color_palette(\"crest\", as_cmap=True), hue=sim_io_bw_mb, ax=ax, zorder=10)\n",
     "g.set(xscale='log', yscale='log')\n",
     "g.set(xlabel=\"Total simulated I/O duration per job (s)\", ylabel=\"Total simulated I/O volume per job (Bytes)\")\n",
+    "g.set(title=filename)\n",
     "\n",
     "sns.lineplot(x=\"x\", y=\"y\", data=line_75, legend=None, color=\"#e91140\", zorder=20, label=\"Q3 I/O BW\", ax=ax, linestyle=\"--\", linewidth=1.2, alpha=0.8)\n",
     "sns.lineplot(x=\"x\", y=\"y\", data=line_25, legend=None, color=\"#2b54a5\", zorder=20, label=\"Q1 I/O BW\", ax=ax, linestyle=\"--\", linewidth=1.2, alpha=0.8)\n",
+    "sns.lineplot(x=\"x\", y=\"y\", data=line_75_f, legend=None, color=\"#e91140\", zorder=20, label=\"Q3 I/O BW filtered\", ax=ax, linestyle=\"-\", linewidth=1, alpha=0.8)\n",
+    "sns.lineplot(x=\"x\", y=\"y\", data=line_25_f, legend=None, color=\"#2b54a5\", zorder=20, label=\"Q1 I/O BW filtered\", ax=ax, linestyle=\"-\", linewidth=1, alpha=0.8)\n",
     "\n",
     "ax.minorticks_on()\n",
     "ax.grid(visible=True, which=\"both\", axis=\"both\", zorder=-10.0, alpha=0.4, linewidth=1)\n",
@@ -162,82 +263,8 @@
     "    else:\n",
     "        text.set_text(f\"<= {int(text.get_text())} MB/s\")\n",
     "\n",
-    "plt.savefig(\"IO_volume_to_IO_time_simulated.png\", dpi=300)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "05fb2f5a-f68f-4d71-abd3-8ec093c42c64",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "## Compute the wait time differences and stats for all jobs\n",
-    "\n",
-    "# Mean diffs\n",
-    "wait_time_diffs = []\n",
-    "sim_wait_time = []\n",
-    "real_wait_time = []\n",
-    "\n",
-    "for job in results:\n",
-    "    wait_time_diffs.append(abs(job[\"job_waiting_time_s\"] - job[\"real_waiting_time_s\"]))\n",
-    "    sim_wait_time.append(job[\"job_waiting_time_s\"])\n",
-    "    real_wait_time.append(job[\"real_waiting_time_s\"])\n",
-    "    \n",
-    "mean_wait_time_difference = np.mean(wait_time_diffs)\n",
-    "\n",
-    "# Pearson's correlation\n",
-    "wait_time_corr, _ = pearsonr(sim_wait_time, real_wait_time)\n",
-    "\n",
-    "# Cohen's D \n",
-    "wait_time_cohen_d = cohend(sim_wait_time, real_wait_time)\n",
-    "\n",
-    "print(f\"The mean wait time difference between simulated and real values for all jobs is {mean_wait_time_difference}s (we want a mean difference as close to 0 as possible)\")\n",
-    "print(f\"The Pearson's corr is {wait_time_corr} (we want a correlation as high as possible, simulated and real values should be close)\") \n",
-    "print(f\"The Cohen d effect size is {wait_time_cohen_d} (we want an effect size as low as possible, the use of the simulator should lead to values close to real world traces)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "337e586d-e225-47cf-b5a2-ea915322c5d1",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "sns.set_theme(style=\"ticks\")\n",
-    "\n",
-    "# COLORS FOR THE ENTIRE NOTEBOOK\n",
-    "real_color = (0.1, 0.4, 0.8, 0.5)\n",
-    "sim_color = (1, 0.5, 0.2, 0.5)\n",
-    "\n",
-    "\n",
-    "# Values for x=y target lineplot\n",
-    "max_target = max(max(real_wait_time), max(sim_wait_time))\n",
-    "line = {\"x\": [0, max_target], \"y\": [0, max_target]}\n",
-    "\n",
-    "        \n",
-    "fig, axs = plt.subplots(ncols=3)\n",
-    "fig.set_tight_layout(tight=True)\n",
-    "fig.set_figheight(6)\n",
-    "fig.set_figwidth(20)\n",
-    "\n",
-    "scatter = sns.scatterplot(x=real_wait_time, y=sim_wait_time, s=15, color=\".15\", ax=axs[0])\n",
-    "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0])\n",
-    "scatter.set(xlabel=\"Real\", ylabel=\"Simulated\")\n",
-    "\n",
-    "binwidth = 10000\n",
-    "real_hist = sns.histplot(data=real_wait_time, binwidth=binwidth, ax=axs[1], color=real_color)\n",
-    "real_hist.set(xlabel=f\"Real wait time - binwidth = {binwidth}s\")\n",
-    "\n",
-    "sim_hist = sns.histplot(data=sim_wait_time, binwidth=binwidth, ax=axs[2], color=sim_color)\n",
-    "sim_hist.set(xlabel=f\"Simulated wait time - binwidth = {binwidth}s\")"
+    "# plt.savefig(f\"IO_volume_to_IO_time_simulated.png\", dpi=300)\n",
+    "plt.show()"
    ]
   },
   {
@@ -312,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "bdf129b0-8b28-493b-b1fc-b92647c5f8e5",
    "metadata": {
     "tags": []
@@ -400,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2c8e7372-ef64-4187-a1fd-fffc589912fa",
    "metadata": {
     "tags": []
@@ -568,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "82415cc3-f5a7-4516-a620-2de67ec1acef",
    "metadata": {
     "jupyter": {
@@ -583,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5e502580-6a22-47c0-9aa1-246866edb87a",
    "metadata": {
     "jupyter": {
@@ -600,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "505385fa-868a-4a41-bd4c-42b4d7a478e3",
    "metadata": {
     "jupyter": {
@@ -616,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0a68ce3d-635d-4826-831f-e892cd647fd4",
    "metadata": {
     "tags": []
@@ -630,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "177a8535-0880-407e-a419-4210268a0a62",
    "metadata": {
     "tags": []
